<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.ForgotPasswordFragment"
    android:id="@+id/parent_view"
    >

    <LinearLayout
        android:id="@+id/forgot_password_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:visibility="visible">

        <TextView
            android:id="@+id/reset_password_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:text="@string/field_reset_password"
            android:textColor="#000"
            android:textSize="25sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:padding="16dp">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_field"
                android:inputType="textEmailAddress"
                android:textColor="#000" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/reset_password_button"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="15dp"
            android:background="@drawable/main_button_drawable"
            android:text="@string/field_reset_password"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="30dp"
        android:padding="16dp"
        android:visibility="invisible"
        android:id="@+id/password_reset_done_container"
        >
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_reset_email_sent"
            android:textColor="#000"
            android:textSize="25sp"

            />

        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/password_reset_info"
            android:text="@string/password_reset_info"
            android:textColor="#000"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/return_to_launcher_fragment"
            android:textColor="@color/link_blue"
            android:textSize="19sp"
            android:id="@+id/return_to_launcher_fragment"
            android:background="#fff"
            />


    </LinearLayout>


</FrameLayout>